evaluation/test_suite/positive/ub41/2.c
#include <stdio.h>

int main()
{
    int x = 0;
    printf("%d\n", 1 / x);
}
