evaluation/test_suite/negative/ub49/2.c
#include <stdio.h>
#include <stdint.h>

int main()
{
    int32_t x = 1;
    printf("%d\n", x << 30);
}
